--- a/ask.html
+++ b/ask.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">mkStone</a>
+      <a class="navbar-brand" href="index.html"><img src="images/artical_03.png" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -222,34 +222,7 @@
 
 
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-           <p>
-                吾儿，当你出生的那天,洛丹伦的森林中悄声回荡着你的名字“阿尔萨斯”。</p>
-                <p>吾儿,我骄傲地看着你成长为正义的代行者。记住——我们的家族永远用智慧和力量统治。</p>
-                <p>我也知道当你试着使用你巨大的力量的时候,你会保持克制。</p>
-                <p>但真正的胜利,吾儿——是获得你的人民的心</p>
 
-                <p><strong><em>总有一天我的生命将终抵达终点，而你将加冕为王。</em></strong></p>
-                <div id="comment"></div>
-
-      </div>
-      <div class="modal-footer">
-      <textarea name="" id="" cols="50" rows="2"></textarea>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" id="btn" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- /modal -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    </main> <!-- cd-main-content -->
 
@@ -309,6 +282,36 @@
       <a class="cd-google cd-img-replace" href="">Google Plus</a>
     </div> <!-- socials -->
   </nav>
+
+
+  <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+           <p>
+                吾儿，当你出生的那天,洛丹伦的森林中悄声回荡着你的名字“阿尔萨斯”。</p>
+                <p>吾儿,我骄傲地看着你成长为正义的代行者。记住——我们的家族永远用智慧和力量统治。</p>
+                <p>我也知道当你试着使用你巨大的力量的时候,你会保持克制。</p>
+                <p>但真正的胜利,吾儿——是获得你的人民的心</p>
+
+                <p><strong><em>总有一天我的生命将终抵达终点，而你将加冕为王。</em></strong></p>
+                <div id="comment"></div>
+
+      </div>
+      <div class="modal-footer">
+      <textarea name="" id="" cols="50" rows="2"></textarea>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" id="btn" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /modal -->
   
 
 <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
