--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">mkStone</a>
+      <a class="navbar-brand" href="index.html"><img src="images/artical_03.png" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -247,10 +247,10 @@
   <p>Copyright © 2016. <span><a href="">赞助我们</a></span>
   <span class="github-span"><a href="https://github.com/shijingyu/mmkk"><img src="images/github.png" alt=""></span>
   </a> 
-  <a class="author" href="">soFly</a>
-  <a class="author" href="">stboy</a>
-  <a class="author" href="">doubi</a>
-  <a class="author" href="">gentlemen</a>
+  <a class="author" href="http://soflyman.com">soFly</a>
+  <a class="author" href="http://www.石景宇.com">stboy</a>
+  <a class="author" href="http://xianianjun.cn">doubi</a>
+  <a class="author" href="index.html">gentlemen</a>
   <a class="author" href="about.html">about</a>
   </p>
 
