--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>about</title>
+	<title>About us</title>
 </head>
 <link rel="stylesheet" href="css/about.css">
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
