--- a/ask.html
+++ b/ask.html
@@ -23,8 +23,8 @@
   
   
 <header class="">
-    <nav class="navbar navbar-fixed-top navbar-default " role="navigation">
- <div class="container">
+      <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="images/artical_03.png" alt=""></a>
+     <a href="index.html"> <img src="images/artical_03.png" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,7 +41,7 @@
       <ul class="nav navbar-nav">
        <li><a href="index.html">首页</a></li>
             <li><a href="article.html">文章</a></li>
-            <li class="active"><a href="">问答</a></li>
+            <li class="active"><a href="ask.html">问答</a></li>
             <li><a href="download.html">资源</a></li>
             <li><a href="about.html">关于</a></li>
       </ul>
