xnj-mkStone 1.0.11  上线修改
111

--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>233333333333</title>
+    <title>Article</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="images/artical_03.png" alt="">
+      <a href="index.html"><img src="images/artical_03.png" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,22 +80,10 @@
  <!-- 主体内容开始 -->
 <div class="container">
   <div class="row">
-  <!-- 左边侧边栏开始 -->
-      <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-        <div class="list-group">
-              <a href="#" class="list-group-item active">
-                侧边栏
-              </a>
-              <a href="#" class="list-group-item">第一个</a>
-              <a href="#" class="list-group-item">第二个</a>
-              <a href="#" class="list-group-item">第三个</a>
-              <a href="#" class="list-group-item">第四个</a>
-          </div>
-      </div>
-      <!-- 左边侧边栏结束 -->
+  
 
       <!-- 右边瀑布流开始 -->
-      <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="main">
            <!-- 瀑布流小块 -->
           <div class="box" type="button" data-toggle="modal" data-target="#myModal">
