--- a/single.html
+++ b/single.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=3">
-    <title>Bootstrap 303 Template</title>
+    <title>Download</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/single.css">
 
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="images/artical_03.png" alt="">
+      <a href="index.html"><img src="images/artical_03.png" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -140,12 +140,11 @@
         <div class="single_r col-md-2">
                <p class="p1">
                   本站收集了各种实用的PC和移动端应用，团队不定时进行软件的发布及补档，如果您发现资源过期了请及时留言联系我们。<br>
-                  QQ：722988547 <br>
-                  Mail：ABC@Gmail.com
+                  xy960722@gmail.com
                </p>
                <p class="p2">              
                   <p>如果喜欢我们的网站，请支持我们！</p>
-                  <img src="images/source_11.png" alt="">
+                  <img style="width:180px" src="images/erweima.jpg" alt="">
                </p>
            </div>
            <!-- single右边-end -->
