--- a/addarticle.html
+++ b/addarticle.html
@@ -42,7 +42,7 @@
   <li><a href="res.php"><i class="product"></i><em>资源列表</em></a></li>
  </ul>
   <ul>
-  <li><a href="article.php"><i class="article"></i><em>文章列表</em></a></li>
+  <li><a href="article_show.php"><i class="article"></i><em>文章列表</em></a></li>
  </ul>
   <ul>
   <li><a href="usename.php"><i class="usename"></i><em>会员列表</em></a></li>
@@ -57,7 +57,7 @@
  <div id="dcMain">
    <!-- 当前位置 -->
 <div id="urHere">MkStone 管理中心<b></b><strong>添加文章</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-            <h3><a href="article.php" class="actionBtn">文章列表</a>添加文章</h3>
+            <h3><a href="article_show.php" class="actionBtn">文章列表</a>添加文章</h3>
     <form action="addarticle.php" method="post" enctype="multipart/form-data">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
