php-1.0.8-增加文章属性

--- a/addarticle.html
+++ b/addarticle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>MkStone 管理中心</title>
@@ -66,6 +66,24 @@
         <input type="text" name="title" value="" size="80" class="inpMain" />
        </td>
       </tr>
+      
+
+
+       <tr>
+       <td width="75" align="right">更新时间/td>
+       <td>
+        <input type="text" name="upload" value="" size="80" class="inpMain" />
+       </td>
+      </tr>
+ <tr>
+       <td width="90" align="right">文章作者</td>
+       <td>
+        <input type="text" name="author" value="" size="80" class="inpMain" />
+       </td>
+      </tr>
+
+
+
       <tr>
        <td align="right">文章分类</td>
        <td>
