--- a/addarticle.html
+++ b/addarticle.html
@@ -70,7 +70,7 @@
 
 
        <tr>
-       <td width="75" align="right">更新时间/td>
+       <td width="75" align="right">更新时间</td>
        <td>
         <input type="text" name="upload" value="" size="80" class="inpMain" />
        </td>
