PHP-1.1.0-增加资源页面属性

--- a/addarticle.html
+++ b/addarticle.html
@@ -72,7 +72,7 @@
        <tr>
        <td width="75" align="right">更新时间</td>
        <td>
-        <input type="text" name="upload" value="" size="80" class="inpMain" />
+        <input type="text" name="upload" placeholder="例如：2016-10-08" size="80" class="inpMain" />
        </td>
       </tr>
  <tr>
