--- a/about.html
+++ b/about.html
@@ -1,45 +1,72 @@
 <!-- <!DOCTYPE html> -->
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>About us</title>
+    <meta charset="UTF-8">
+    <title>About us</title>
 </head>
 <link rel="stylesheet" href="css/about.css">
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/pageswitch.js"></script>
+
 <body>
-<div id="container" data-PageSwitch>
-		<div class="sections">
-			<div class="section active" id="section0">
-				<div class="intro">
-					<h1 class="title">mkStone</h1>
-					<p>我们是一个团队！</p>
-
-			    </div>
-			</div>
-			<div class="section" id="section1">
-				<div class="intro">
-					<h1 class="title">mkStone</h1>
-					<p>网站正在搭建中……</p>
-			
-				</div>
-			</div>
-			<div class="section" id="section2">
-				<div class="intro">
-					<h1 class="title">mkStone</h1>
-					<p>网站正在搭建中……</p>
-					
-				</div>
-			</div>
-			<div class="section" id="section3">
-				<div class="intro">
-					<h1 class="title">THE END</h1>
-					<p>Everything will be okay in the end. If it's not okay, it's not the end.</p>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div id="container" data-PageSwitch>
+        <div class="sections">
+            <div class="section active" id="section0">
+                <div class="intro">
+                    <h1 class="title"><span>Mk</span>Stone</h1>
+                    <div class="about-hr"></div>
+                    <p>旭<span style="color:#f00;">日</span>东升，我们如朝阳</p>
+                </div>
+            </div>
+            <!-- shitouboy's introduce -->
+            <div class="section" id="section1">
+                <div class="single-head"><img src="images/single-head.png" alt="">
+                    <p>石头哥</p>
+                </div>
+                <div class="intro">
+                    <h1 class="title"></h1>
+                    <p>我是石头哥，有酒有故事……</p>
+                    <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
+                </div>
+            </div>
+            <!-- sofly's introduce -->
+            <div class="section" id="section2">
+                <div class="single-head"><img src="images/single-head.png" alt=""><p>soFly</p></div>
+                <div class="intro">
+                    <h1 class="title"></h1>
+                    <p>我是石头哥，有酒有故事……</p>
+                    <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
+                </div>
+            </div>
+            <!-- doubi's introduce -->
+            <div class="section" id="section3">
+                <div class="single-head"><img src="images/single-head.png" alt=""><p>doubi</p></div>
+                <div class="intro">
+                    <h1 class="title"></h1>
+                    <p>我是石头哥，有酒有故事……</p>
+                    <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
+                </div>
+            </div>
+            <!-- gentleMan's introduce -->
+            <div class="section" id="section4">
+                <div class="single-head"><img src="images/single-head.png" alt=""><p>gentleMan</p></div>
+                <div class="intro">
+                    <h1 class="title"></h1>
+                    <p>我是石头哥，有酒有故事……</p>
+                    <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
+                </div>
+            </div>
+            <div class="section active" id="section5">
+                <div class="intro">
+                    <h1 class="title">The end</h1>
+                    <div class="about-hr"></div>
+                    <p>悟已往之不谏，知来者之可追</p>
+                    <p>感谢您的关注</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
 
 </html>
