--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                                 <figure style="width:210px;">
                                     <div class="jqhover-main">
                                         <div class="jqhover-border">
-                                            <a href="download.html"><img src="images/download.png" alt="img05"></a>
+                                            <a href="download.php"><img src="images/download.png" alt="img05"></a>
                                             <p class="fun-name">资源下载</p>
                                         </div>
                                         <div class="fun-describe">
                                             <p>提供各种免费、实用的插件，下载工具，办公软件等。</p>
-                                            <p class="getmore"><a href="download.html">获取更多></a></p>
+                                            <p class="getmore"><a href="download.php">获取更多></a></p>
                                         </div>
                                     </div>
                                 </figure>
