--- a/about.html
+++ b/about.html
@@ -7,8 +7,12 @@
 </head>
 <link rel="stylesheet" href="css/about.css">
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/about/ns.hover.js"></script>
 <script src="js/pageswitch.js"></script>
 
+
+
+ 
 <body>
     <div id="container" data-PageSwitch>
         <div class="sections">
@@ -21,24 +25,28 @@
             </div>
             <!-- shitouboy's introduce -->
             <div class="section" id="section1">
-                <div class="single-head"><img src="images/single-head.png" alt="">
-                    <p>石头哥</p>
+                <div class="single-head"><img src="images/about/shitouboy.gif" alt="">
+                    <p>石头boy</p>
                 </div>
                 <div class="intro">
                     <h1 class="title"></h1>
-                    <p>我是石头哥，有酒有故事……</p>
+                    <p>EE工程师，CS爱好者，精通PHP、Python、linux,喜欢开源技术，追求Geek精神。<br><br>石头哥负责本站的后台功能逻辑的实现，数据库的设计、构造，服务器环境的配置。</p>
                     <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
                 </div>
             </div>
             <!-- sofly's introduce -->
             <div class="section" id="section2">
-                <div class="single-head"><img src="images/single-head.png" alt=""><p>soFly</p></div>
+                <div class="single-head" id="soFly-head"><img id="soFly-head" src="images/open_photo_temp3.jpg" alt=""><p>soFly</p></div>
                 <div class="intro">
+
                     <h1 class="title"></h1>
-                    <p>我是石头哥，有酒有故事……</p>
+                    <p>Your are the owner of your career!</p>
                     <a href="" class="github-a"><img src="images/about/github_about.png" alt="" class="github-img"></a>
+                    
                 </div>
             </div>
+
+            
             <!-- doubi's introduce -->
             <div class="section" id="section3">
                 <div class="single-head"><img src="images/single-head.png" alt=""><p>doubi</p></div>
@@ -68,5 +76,19 @@
         </div>
     </div>
 </body>
+<script>
+  $('#soFly-head').nsHover({
+      scaling : 0.8,
+      speed: 'normal',
+      rounded: 'normal',
+      bgcolor: '#ffffff',
+      bgopacity : 0.5,            
+      bgpic : '',
+      bgsize : '50%',
+      bganim : 'fade',
+      shadow : false,
+      content: ''
+  });
+</script> 
 
 </html>
