--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       scaling : 1.2,
       speed: 'normal',
       rounded: 'normal',
-      bgcolor: '#fff',
+      bgcolor: '#ccc',
       bgopacity : 0.6,            
       bgpic : 'images/lens.png',
       bgsize : '50%',
